# practical-c

./: LICENSE  README.md
Chapter2/: readme.txt
Chapter2/add/: add.c
Chapter2/foobar_cmake/: CMakeLists.txt  Makefile  bar.c  foo.c  main.c
Chapter2/foobar_make/: Makefile  bar.c  foo.c
Chapter2/hello_cmake/: CMakeLists.txt
Chapter2/hello_make/: Makefile
